Fix calendar on narrow devices

--- a/src/app/features/internal/common/components/schedule-calendar/schedule-calendar.component.scss
+++ b/src/app/features/internal/common/components/schedule-calendar/schedule-calendar.component.scss
@@ -30,7 +30,7 @@
         @extend .weak-text;
         font-size: 9px;
         line-height: 17px;
-        min-width: 38px;
+        min-width: 36px;
         width: calc(100%/7);
       }
     }
